force-app/volunteers/objects/VolunteerHoursLog__c/VolunteerHoursLog__c.object-meta.xml
<CustomObject>
    <label>Volunteer Hours Log</label>
    <nameField>
        <displayFormat>Hours-{00000}</displayFormat>
        <label>Volunteer Hours Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteer Hours Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>