force-app/volunteers/objects/VolunteerHoursLog__c/fields/PlannedStartDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlannedStartDateTime__c</fullName>
    <label>Planned Start Date/Time</label>
    <type>DateTime</type>
</CustomField>