force-app/volunteers/objects/VolunteerHoursLog__c/fields/VolunteerActivity__c.field-meta.xml
<CustomField>
    <fullName>VolunteerActivity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Volunteer Activity</label>
    <referenceTo>VolunteerActivity__c</referenceTo>
    <relationshipLabel>Volunteer Hours Logs</relationshipLabel>
    <relationshipName>VolunteerHoursLogs</relationshipName>
    <type>Lookup</type>
</CustomField>