force-app/volunteers/objects/VolunteerHoursLog__c/fields/VolunteerContact__c.field-meta.xml
<CustomField>
    <fullName>VolunteerContact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>The contact record for the volunteer logging hours.</inlineHelpText>
    <label>Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Hours Logs</relationshipLabel>
    <relationshipName>Volunteer_Hours_Logs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>